fix box-shadow (no overlap)

--- a/views/screen.scss
+++ b/views/screen.scss
@@ -61,11 +61,20 @@ h1 {
 }
 
 h2 {
-    @include box-heading;
-    @include box-shadow(1px 0px 4px #CCC);
+    font-size: $font_size;
+    line-height: $font_size;
+    margin: 0;
+    padding: 0 10px 0 0; // margin -> visible dropshadow of inner span
 
+    span {
+        @include box-shadow(2px 2px 2px #ccc);
+        display: block;
+        background: $active_color;
+        padding: $box-heading-padding;
+    }
+
+    overflow: hidden;
     font-weight: bold;
-    background: $active_color;
     float: left;
 }
 
@@ -207,8 +216,10 @@ a.action-icon {
 
 #navigation {
     @include box;
-    @include box-heading;
     margin: 13px 0 27px;
+    padding: $box-heading-padding;
+    font-size: $font_size;
+    line-height: $font_size;
     display: block;
     overflow: hidden;
 
@@ -267,8 +278,6 @@ a.action-icon {
 }
 
 #fullcontent {
-    @include col;
-
     width: $content_width; 
 
     .box-content {
@@ -278,14 +287,14 @@ a.action-icon {
 
 
 #col1 {
-    @include col;
+    float: left;
 
     width: $left_column_width;
     margin-right: $box_spacing_x;
 }
 
 #col2 {
-    @include col;
+    float: left;
 
     width: 710px;
 }
@@ -412,16 +421,6 @@ a.action-icon {
             }
         }
     }
-
-    .parameter-panel-mode-toggle {
-        @include box-heading;
-
-        float: right;
-
-        .action.active {
-            font-weight: bold;
-        }
-    }
 }
 
 .preview-box,
@@ -430,9 +429,8 @@ a.action-icon {
     width: $preview_box_width;
     margin: 0 0 $box_spacing_y 0;
 
-    h2 {
+    h2 span {
         background: #fff;
-        margin: 0;
     }
 
     .preview-box-content {
@@ -476,7 +474,7 @@ a.action-icon {
     }
 
     &.active {
-        h2 {
+        h2 span {
             background: $active_color;
         }
     }
