--- a/views/scss/_variables.scss
+++ b/views/scss/_variables.scss
@@ -21,3 +21,5 @@ $preview_box_content_width_full: $preview_box_width_full - 2 * $border_width;
 $left_column_width: $content_width - $right_column_width - $box_spacing_x;
 
 $footer_height: 25px;
+
+$box-heading-padding: 5px 8px 4px 7px;
